--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js",
     "server": "node server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "MahinTechinfo",
